# test_megaohm

./: CMakeLists.txt  partitions.csv  read.me  sdkconfig  sdkconfig.old
components/modbus_master_provide/: CMakeLists.txt  mb_m_provide.c  mb_m_provide.h  modbus_params.h
components/mqtt_provide/: CMakeLists.txt  aws.crt  client.crt  client.key  mqtt_provide.c  mqtt_provide.h
main/: CMakeLists.txt  main.c
